--- a/public/500.html
+++ b/public/500.html
@@ -169,7 +169,7 @@
         </div>
         <div class="page">
             <h2>Noe gikk skeis!</h2>
-            <p>Vi har loggførst feilen</p>
+            <p>Vi har loggført feilen</p>
             <a href="/" class="link">Tilbake til forsiden</a>
         </div>
     </div>
